- Opening some classes for annotation processing;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>