@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -325,6 +327,26 @@
 					<target>${java.version}</target>
 					<compilerArgs>
 						<arg>-parameters</arg>
+						<arg>
+							-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+						<arg>
+							-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+						<arg>
+							-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+						<arg>
+							-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+						<arg>
+							-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						<arg>
+							-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						<arg>
+							-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+						<arg>
+							-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+						<arg>
+							-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+						<arg>
+							-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
 					</compilerArgs>
 				</configuration>
 
@@ -337,6 +359,8 @@
 							<goal>compile</goal>
 						</goals>
 						<configuration>
+							<fork>true</fork>
+							<showWarnings>true</showWarnings>
 							<proc>only</proc>
 							<failOnError>false</failOnError>
 							<includes>
@@ -359,6 +383,8 @@
 							<goal>testCompile</goal>
 						</goals>
 						<configuration>
+							<fork>true</fork>
+							<showWarnings>true</showWarnings>
 							<proc>only</proc>
 							<failOnError>false</failOnError>
 							<debug>${project.verbose}</debug>
@@ -604,9 +630,6 @@
 				<version>${hibernate.version}</version>
 				<executions>
 					<execution>
-						<configuration>
-							<enableLazyInitialization>true</enableLazyInitialization>
-						</configuration>
 						<goals>
 							<goal>enhance</goal>
 						</goals>
@@ -679,7 +702,7 @@
 				<configuration>
 					<serverId>${project.config.repository.public}</serverId>
 					<nexusUrl>${project.config.repository.public.repository.url}</nexusUrl>
-<!--					<skipRemoteStaging>true</skipRemoteStaging>-->
+					<!--					<skipRemoteStaging>true</skipRemoteStaging>-->
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
